# velocity

./: .dockerignore  ADAPTIVE_FLUSHING.md  Cargo.toml  DEBUG_SERVER.bat  Dockerfile  Dockerfile.build  FINAL_RESULTS.md  LICENSE  Makefile  PERFORMANCE_GUIDE.md  README.md  REBUILD_SERVER.bat  START_SERVER.bat  STATISTICS.md  VELOCITY_PROTOCOL.md  build-all.bat  build-linux.bat  docker-compose.yml  simple_test.rs  test.velo  test_compile.rs  velocity.toml
examples/: client_example.rs
scripts/tray/: tray-linux.py  tray-windows.ps1
src/: addon.rs  client.rs  config.rs  lib.rs  main.rs  performance.rs  server.rs  service_runner.rs  setup.rs  sql.rs  studio.rs  studio_index.html
velocitydb/: velocity.wal
