[package]
name = "velocity"
version = "0.2.0"
edition = "2021"
authors = ["Hacı Mert Gökhan"]
license = "MIT"
description = "High-performance embedded key-value database with LSM-Tree architecture, Bloom filters, and intelligent caching"
repository = "https://github.com/velocitydb-org/velocity"
keywords = ["database", "key-value", "lsm-tree", "embedded", "storage"]
categories = ["database", "data-structures"]
readme = "README.md"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"

# Network and protocol
bytes = "1.5"
futures = "0.3"

# Security
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
crc32fast = "1.3"

# SQL parsing
sqlparser = "0.39"

# Configuration
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
colored = "2.1"
dialoguer = "0.11"
chrono = "0.4"
notify = "6.1"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
open = "5.1"

[dev-dependencies]
criterion = "0.5"  # Benchmarking
tempfile = "3.8"   # Geçici dosyalar için
tokio-test = "0.4" # Async testing utilities

[features]
default = []

[lib]
name = "velocity"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
